--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 <body>
 	<h1>NANA</h1>
 	<div class ="row">
-	<div class="col-md-8 bg-danger">ZIMY</div>
+	<div class="col-md-8 text-danger ">ZIMY</div>
   	<div class="col-md-4 bg-warning" >LONA</div>
         </div>
 	<button type ="submit">button</button>
