--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 <body>
 	<h1>NANA</h1>
 	<div class ="row">
-		<div class="col-xs-6 bg-danger">ALATHA</div>
-		<div class="col-xs-6 bg-info">NANA</div>
+		<div class="col-xs-6  col md-6 bg-danger">desktop</div>
+		<div class="col-xs-6  col md-6 bg-info">desktop</div>
 		</div>
+		<div class ="row">
+		<div class="col-md-6 col-xs-12 bg-info">mobile</div>
+  		<div class="col-md-6 col-xs-12 bg-danger">mobile</div>
+  		</div>
+
 
 	<button type ="submit">button</button>
 	<button class="btn btn-primary" type ="submit">button</button>
