--- a/index2.html
+++ b/index2.html
@@ -10,9 +10,19 @@
 <body>
 	<h1>NANA</h1>
 	<div class ="row">
-	<div class="col-md-8 text-danger ">ZIMY</div>
-  	<div class="col-md-4 bg-warning" >LONA</div>
+	<div class="col-md-8  col-xs-9 text-danger ">ZIMY</div>
+  	<div class="col-md-4 col-xs-3 bg-warning" >LONA</div>
+
         </div>
+        <div class ="row">
+	<div class="col-md-7 col-xs-7 text-danger">ZIMY</div>
+  	<div class="col-md-5  col xs-7bg-warning">nana</div>
+  	</div>
+  	<div class ="row">
+	<div class="col-md-9  col-xs-5 text-danger ">ZIMY</div>
+  	<div class="col-md-3 col-xs-9 bg-warning">cindy</div>
+  	</div>
+
 	<button type ="submit">button</button>
 	<button class="btn btn-primary" type ="submit">button</button>
 
