--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,13 @@
 
 </head>
 <body>
+<nav>
+<ul class="navbar navbar-default">
+  <li role="presentation" class="active"><a href="index.html">Home</a></li>
+  <li role="presentation"><a href="task4.html">Profile</a></li>
+  <li role="presentation"><a href="https://www.facebook.com/nomthandazo.mde">Messages</a></li>
+</ul>
+</nav>
 	<h1>NANA</h1>
 	<div class ="row">
 	<div class="col-md-8  col-xs-9 text-danger ">ZIMY</div>
@@ -16,7 +23,7 @@
         </div>
         <div class ="row">
 	<div class="col-md-7 col-xs-7 text-danger">ZIMY</div>
-  	<div class="col-md-5  col xs-7bg-warning">nana</div>
+  	<div class="col-md-5  col xs-7 bg-warning">nana</div>
   	</div>
   	<div class ="row">
 	<div class="col-md-9  col-xs-5 text-danger ">ZIMY</div>
