--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 
 </head>
 <body>
+<nav>
+<ul class="navbar navbar-default">
+  <li role="presentation" class="active"><a href="index.html">Home</a></li>
+  <li role="presentation"><a href="task4.html">Profile</a></li>
+  <li role="presentation"><a href="https://www.facebook.com/nomthandazo.mde">Messages</a></li>
+</ul>
+</nav>
 	<h1>NANA</h1>
 	<div class ="row">
 		<div class="col-xs-6  col md-6 bg-danger">desktop</div>
