--- a/index3.html
+++ b/index3.html
@@ -22,6 +22,51 @@
         </div>
 	<button type ="submit">button</button>
 	<button class="btn btn-primary" type ="submit">button</button>
+	
+<form>
+<label class="sr-only" for="inputHelpBlock">How do you think this will help you?</label>
+<input type="text" id="inputHelpBlock" class="form-control" aria-describedby="helpBlock">
+...
+<span id="helpBlock" class="help-block"></span>
+
+
+<div class="checkbox">
+  <label for="favourite food">My favourite food</label></div>
+  <label>
+    <input type="checkbox" value="banana">banana</label>
+    </div>
+    <div class="checkbox">
+    <label>
+    <input type="checkbox" value="pizza">pizza</label>
+    </div>
+    <div class="checkbox">
+    </label>
+    <input type="checkbox" value="ferrero roche">ferrero roche</label>
+    </div>
+    <div class="checkbox">
+    <label>
+    <input type="checkbox" value="lindt dark chocolate">lindt dark chocolate</label>
+    </div>
+    <div class="checkbox">
+    <label>
+    <input type="checkbox" value="steers burger">steers burger
+    </label>
+    </div>
+    <div class="radio">
+  <label>
+  <label for="gender">Gender</label></div>
+    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+    Female
+  </label>
+</div>
+<div class="radio">
+<div class="radio">
+  <label>
+    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+    Male
+  </label>
+</div>
+
 
 </body>
 </html>
