--- a/questions.html
+++ b/questions.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="bootstrap.min.css">
+<link rel="stylesheet" href="bootstrap-theme.min.css"> 
+
 </head>
 <body>
-
+<nav>
+<ul class="nav nav-pills">
+  <li role="presentation" class="active"><a href="index.html">Home</a></li>
+  <li role="presentation"><a href="task4.html">Profile</a></li>
+  <li role="presentation"><a href="https://www.facebook.com/nomthandazo.mde">Messages</a></li>
+</ul>
+</nav>
 <form>
-<label class="sr-only" for="inputHelpBlock">How do you think this will help you?</label>
-<input type="text" id="inputHelpBlock" class="form-control" aria-describedby="helpBlock">
-...
-<span id="helpBlock" class="help-block"></span>
-
-
+<label for="text input">How would you describe yourself as a coder></label>
+<input type="text" class="form-control" placeholder="Text input">
 <div class="checkbox">
   <label for="favourite food">My favourite food</label></div>
   <label>
@@ -22,6 +27,7 @@
     </div>
     <div class="checkbox">
     </label>
+    <label>
     <input type="checkbox" value="ferrero roche">ferrero roche</label>
     </div>
     <div class="checkbox">
@@ -35,20 +41,19 @@
     </div>
     <div class="radio">
   <label>
+
   <label for="gender">Gender</label></div>
-    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-    Female
-  </label>
+    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">Female</label>
 </div>
 <div class="radio">
 <div class="radio">
   <label>
-    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-    Male
-  </label>
+    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">Male</label>
 </div>
 
 </form>
+<script src="jquery.min.js"></script>
+  <script src="bootstrap.min.js"></script>
 </body>
 
 
